--- a/fodmap-app/package.json
+++ b/fodmap-app/package.json
@@ -14,8 +14,10 @@
     "@types/jest": "^29.5.12",
     "@types/node": "^20.14.10",
     "axios": "^1.7.2",
+    "classnames": "^2.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "tailwind-scrollbar": "^3.1.0",
     "typescript": "^5.5.3"
   },
   "devDependencies": {
