--- a/fodmap-app/package.json
+++ b/fodmap-app/package.json
@@ -15,14 +15,18 @@
     "@types/node": "^20.14.10",
     "axios": "^1.7.2",
     "classnames": "^2.5.1",
+    "qs": "^6.12.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
     "tailwind-scrollbar": "^3.1.0",
     "typescript": "^5.5.3"
   },
   "devDependencies": {
+    "@types/qs": "^6.9.15",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/react-modal": "^3.16.3",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
