--- a/fodmap-app/package.json
+++ b/fodmap-app/package.json
@@ -10,11 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@types/axios": "^0.14.0",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.14.10",
     "axios": "^1.7.2",
     "classnames": "^2.5.1",
+    "dotenv": "^16.4.5",
     "qs": "^6.12.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -23,6 +23,7 @@
     "typescript": "^5.5.3"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/qs": "^6.9.15",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
