--- a/fodmap-app/package.json
+++ b/fodmap-app/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^20.14.10",
     "axios": "^1.7.2",
     "classnames": "^2.5.1",
+    "crypto-js": "^4.2.0",
     "dotenv": "^16.4.5",
     "qs": "^6.12.3",
     "react": "^18.2.0",
@@ -24,6 +25,7 @@
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
+    "@types/crypto-js": "^4.2.2",
     "@types/qs": "^6.9.15",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
