--- a/fodmap-app/package.json
+++ b/fodmap-app/package.json
@@ -10,10 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google-cloud/translate": "^8.3.0",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.14.10",
+    "@vitalets/google-translate-api": "^9.2.0",
     "axios": "^1.7.2",
     "classnames": "^2.5.1",
+    "cors": "^2.8.5",
     "crypto-js": "^4.2.0",
     "dotenv": "^16.4.5",
     "qs": "^6.12.3",
@@ -21,6 +24,7 @@
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
     "tailwind-scrollbar": "^3.1.0",
+    "translate.js": "^1.3.2",
     "typescript": "^5.5.3"
   },
   "devDependencies": {
