--- a/fodmap-app/package.json
+++ b/fodmap-app/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^20.14.10",
     "@vitalets/google-translate-api": "^9.2.0",
     "axios": "^1.7.2",
+    "axios-retry": "^4.5.0",
     "classnames": "^2.5.1",
     "cors": "^2.8.5",
     "crypto-js": "^4.2.0",
