--- a/backend/fodmap-backend/render.yaml
+++ b/backend/fodmap-backend/render.yaml
@@ -6,11 +6,11 @@ services:
     startCommand: java -jar target/*.jar
     envVars:
       - key: DB_URL
-        value: jdbc:mysql://your-mysql-host:3306/your-database-name
+        value: jdbc:mysql://localhost:9000/foodmap
       - key: DB_USERNAME
-        value: your-username
+        value: root
       - key: DB_PASSWORD
-        value: your-password
+        value: admin
     plan: free  # or the desired plan
     region: frankfurt  # or the preferred region
     runtime: java21
