--- a/backend/fodmap-backend/src/main/resources/application.properties
+++ b/backend/fodmap-backend/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=fodmap-backend
-server.port=9898
+server.port=${PORT:9898}
 
-spring.datasource.url=jdbc:mysql://localhost:9000/foodmap
-spring.datasource.username=root
-spring.datasource.password=admin
+spring.datasource.url=postgresql://admin:i7TiFwYaGxt2CoUxFjTB26HfrBAi2Y3I@dpg-cqvot7tds78s739o6me0-a.frankfurt-postgres.render.com/fodmap_4j17
+spring.datasource.username=admin
+spring.datasource.password=i7TiFwYaGxt2CoUxFjTB26HfrBAi2Y3I
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
