setting up internal link to the database

--- a/backend/fodmap-backend/src/main/resources/application.properties
+++ b/backend/fodmap-backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=fodmap-backend
 server.port=${PORT:9898}
 
-spring.datasource.url=postgresql://admin:i7TiFwYaGxt2CoUxFjTB26HfrBAi2Y3I@dpg-cqvot7tds78s739o6me0-a.frankfurt-postgres.render.com/fodmap_4j17
+spring.datasource.url=postgresql://admin:i7TiFwYaGxt2CoUxFjTB26HfrBAi2Y3I@dpg-cqvot7tds78s739o6me0-a/fodmap_4j17
 spring.datasource.username=admin
 spring.datasource.password=i7TiFwYaGxt2CoUxFjTB26HfrBAi2Y3I
 
