--- a/backend/fodmap-backend/src/main/resources/application.properties
+++ b/backend/fodmap-backend/src/main/resources/application.properties
@@ -5,7 +5,8 @@ spring.datasource.url=postgresql://admin:i7TiFwYaGxt2CoUxFjTB26HfrBAi2Y3I@dpg-cq
 spring.datasource.username=admin
 spring.datasource.password=i7TiFwYaGxt2CoUxFjTB26HfrBAi2Y3I
 
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.datasource.driver-class-name=org.postgresql.Driver
 
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
