--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,14 +1,5 @@
-# Etapa de construcción
-FROM openjdk:21-jdk AS build
-
-# Establecer el directorio de trabajo
+FROM openjdk:21-jdk-slim
 WORKDIR /app
-
-# Copiar el archivo JAR al contenedor
-COPY target/fodmap-backend-0.0.1-SNAPSHOT.jar /app/fodmap-backend-0.0.1-SNAPSHOT.jar
-
-# Comando para ejecutar el archivo JAR
-CMD ["java", "-jar", "/app/fodmap-backend-0.0.1-SNAPSHOT.jar"]
-
-# Exponer el puerto
-EXPOSE 5432
+COPY target/*.jar app.jar
+EXPOSE 9898
+CMD ["java", "-jar", "app.jar"]
