--- a/backend/fodmap-backend/src/main/resources/application.properties
+++ b/backend/fodmap-backend/src/main/resources/application.properties
@@ -1,13 +1,8 @@
-spring.application.name=fodmap-backend
-
-spring.datasource.url=jdbc:postgresql://admin:i7TiFwYaGxt2CoUxFjTB26HfrBAi2Y3I@dpg-cqvot7tds78s739o6me0-a/fodmap_4j17
+spring.datasource.url=jdbc:postgresql://dpg-cqvot7tds78s739o6me0-a.frankfurt-postgres.render.com:5432/fodmap_4j17
 spring.datasource.username=admin
 spring.datasource.password=i7TiFwYaGxt2CoUxFjTB26HfrBAi2Y3I
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-
-spring.datasource.hikari.connection-timeout=30000
-spring.datasource.hikari.maximum-pool-size=10
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
