--- a/backend/fodmap-backend/pom.xml
+++ b/backend/fodmap-backend/pom.xml
@@ -52,7 +52,7 @@
         <dependency>
     <groupId>org.postgresql</groupId>
     <artifactId>postgresql</artifactId>
-    <scope>runtime</scope>
+    <version>42.6.0</version> <!-- Asegúrate de usar la última versión -->
 </dependency>
 
         <dependency>
