--- a/backend/fodmap-backend/src/main/resources/application.properties
+++ b/backend/fodmap-backend/src/main/resources/application.properties
@@ -11,3 +11,6 @@ spring.jpa.show-sql=true
 
 spring.datasource.hikari.connection-timeout=30000
 spring.datasource.hikari.maximum-pool-size=10
+
+server.shutdown=graceful
+server.shutdown.timeout=30s
