ping service to keep alive the server on the main backend

--- a/backend/fodmap-backend/src/main/resources/application.properties
+++ b/backend/fodmap-backend/src/main/resources/application.properties
@@ -13,3 +13,6 @@ spring.datasource.hikari.connection-timeout=30000
 spring.datasource.hikari.maximum-pool-size=10
 
 server.shutdown=graceful
+
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.show-details=always
