encoding charset for spring

--- a/backend/fodmap-backend/src/main/resources/application.properties
+++ b/backend/fodmap-backend/src/main/resources/application.properties
@@ -16,3 +16,7 @@ server.shutdown=graceful
 
 management.endpoints.web.exposure.include=health,info
 management.endpoint.health.show-details=always
+
+spring.http.encoding.charset=UTF-8
+spring.http.encoding.enabled=true
+spring.http.encoding.force=true
