--- a/backend/fodmap-backend/src/main/resources/application.properties
+++ b/backend/fodmap-backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=fodmap-backend
 
-spring.datasource.url=jdbc:postgresql://dpg-cqvot7tds78s739o6me0-a.frankfurt-postgres.render.com:5432/fodmap_4j17
+spring.datasource.url=jdbc:postgresql://dpg-cqvot7tds78s739o6me0-a.frankfurt-postgres.render.com:5432/fodmap_4j17?characterEncoding=UTF-8
 spring.datasource.username=admin
 spring.datasource.password=i7TiFwYaGxt2CoUxFjTB26HfrBAi2Y3I
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -11,7 +11,7 @@ spring.jpa.show-sql=true
 
 spring.datasource.hikari.connection-timeout=30000
 spring.datasource.hikari.maximum-pool-size=10
-
+    
 server.shutdown=graceful
 
 management.endpoints.web.exposure.include=health,info
@@ -20,3 +20,6 @@ management.endpoint.health.show-details=always
 spring.http.encoding.charset=UTF-8
 spring.http.encoding.enabled=true
 spring.http.encoding.force=true
+server.servlet.encoding.charset=UTF-8
+server.servlet.encoding.enabled=true
+server.servlet.encoding.force=true
