--- a/backend/fodmap-backend/src/main/resources/application.properties
+++ b/backend/fodmap-backend/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.jpa.show-sql=true
 
 spring.datasource.hikari.connection-timeout=30000
 spring.datasource.hikari.maximum-pool-size=10
-    
+
 server.shutdown=graceful
 
 management.endpoints.web.exposure.include=health,info
@@ -23,3 +23,9 @@ spring.http.encoding.force=true
 server.servlet.encoding.charset=UTF-8
 server.servlet.encoding.enabled=true
 server.servlet.encoding.force=true
+
+spring.jpa.properties.hibernate.connection.characterEncoding=utf-8
+spring.jpa.properties.hibernate.connection.CharSet=utf-8
+spring.jpa.properties.hibernate.connection.useUnicode=true
+
+logging.level.com.jesus.fodmapapp.fodmap_backend=DEBUG
