--- a/fodmap-app/package.json
+++ b/fodmap-app/package.json
@@ -23,6 +23,7 @@
     "qs": "^6.12.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-lazy-load-image-component": "^1.6.2",
     "react-modal": "^3.16.1",
     "tailwind-scrollbar": "^3.1.0",
     "translate.js": "^1.3.2",
@@ -34,6 +35,7 @@
     "@types/qs": "^6.9.15",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/react-lazy-load-image-component": "^1.6.4",
     "@types/react-modal": "^3.16.3",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.19",
